force-app/main/default/objects/Location__c/fields/Address_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Address_Reference_Number__c</fullName>
    <description>Backup to the UPRN. For updating records and joins other datasets together.</description>
    <inlineHelpText>Unique identifier for locations that do not have a UPRN. This is specific to Openreach.</inlineHelpText>
    <label>Address Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>