force-app/main/default/objects/Location__c/fields/Cabinet_Area__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Area__c</fullName>
    <description>Groups cohorts of Cityfibre RFS for sales and marketing targeting and for reporting and forecasting.</description>
    <inlineHelpText>It is the 3rd most granular view of a collection of cityfibre properties. Level in which a forecasted release date is attached.</inlineHelpText>
    <label>Cabinet Area</label>
    <length>60</length>
    <type>Text</type>
</CustomField>