force-app/main/default/objects/Location__c/fields/Cabinet_Date_Rating__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Date_Rating__c</fullName>
    <description>Allows us to delivery correct marketing message at the right time to the right properties. Forecasting release quantities/sales.</description>
    <inlineHelpText>Denotes the progress of a UPRN throughout the design, build, release phases. DR10 (Design) through to DR0 (Release).</inlineHelpText>
    <label>Cabinet Date Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DR10</fullName>
            </value>
            <value>
                <fullName>DR9</fullName>
            </value>
            <value>
                <fullName>DR8</fullName>
            </value>
            <value>
                <fullName>DR7</fullName>
            </value>
            <value>
                <fullName>DR6</fullName>
            </value>
            <value>
                <fullName>DR5</fullName>
            </value>
            <value>
                <fullName>DR4</fullName>
            </value>
            <value>
                <fullName>DR3</fullName>
            </value>
            <value>
                <fullName>DR2</fullName>
            </value>
            <value>
                <fullName>DR1</fullName>
            </value>
            <value>
                <fullName>DR0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>