force-app/main/default/objects/Location__c/fields/Cabinet_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Release_Date__c</fullName>
    <description>Allows us to predict when a property will go RFS. For sales and marketing targeting and for reporting and forecasting.</description>
    <inlineHelpText>Forecasted release date against UPRN attached on a cabinet level at DR7 Stage.</inlineHelpText>
    <label>Cabinet Release Date</label>
    <type>Date</type>
</CustomField>