force-app/main/default/objects/Location__c/fields/Exchange_Code__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Code__c</fullName>
    <description>Reporting, Openreach roll out strategy.</description>
    <inlineHelpText>Parent telephone exchange that an Openreach property looks back to.</inlineHelpText>
    <label>Exchange Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>