force-app/main/default/objects/Location__c/fields/Existing_ONT_Available__c.field-meta.xml
<CustomField>
    <fullName>Existing_ONT_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tell us how easy the installation will be. Allows us to target lower cost installations.</description>
    <inlineHelpText>Tells us if the property has or had FTTP.</inlineHelpText>
    <label>Existing ONT Available</label>
    <type>Checkbox</type>
</CustomField>