force-app/main/default/objects/Location__c/fields/Feed_Type__c.field-meta.xml
<CustomField>
    <fullName>Feed_Type__c</fullName>
    <description>Tells us how easy the installtion will be.</description>
    <inlineHelpText>Describes whether the property is aerially or underground.</inlineHelpText>
    <label>Feed Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>