force-app/main/default/objects/Location__c/fields/FTTP_Brownfields__c.field-meta.xml
<CustomField>
    <fullName>FTTP_Brownfields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Brownfield sites have existing copper lines in place and also have Fibre to the Premises (FTTP) available.</description>
    <inlineHelpText>Brownfield sites have existing copper lines in place and also have Fibre to the Premises (FTTP) available.</inlineHelpText>
    <label>FTTP Brownfields</label>
    <type>Checkbox</type>
</CustomField>