force-app/main/default/objects/Location__c/fields/FTTP_Brownfields_Restricted__c.field-meta.xml
<CustomField>
    <fullName>FTTP_Brownfields_Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FTTP Brownfields Restricted</label>
    <type>Checkbox</type>
</CustomField>