force-app/main/default/objects/Location__c/fields/FTTP_Greenfield_Available__c.field-meta.xml
<CustomField>
    <fullName>FTTP_Greenfield_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Greenfield sites don&apos;t have any copper lines, so FTTP is your main option.</description>
    <inlineHelpText>Greenfield sites don&apos;t have any copper lines, so FTTP is your main option.</inlineHelpText>
    <label>FTTP Greenfield Available</label>
    <type>Checkbox</type>
</CustomField>