force-app/main/default/objects/Location__c/fields/FTTP_Greenfield_Restricted__c.field-meta.xml
<CustomField>
    <fullName>FTTP_Greenfield_Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FTTP Greenfield Restricted</label>
    <type>Checkbox</type>
</CustomField>