force-app/main/default/objects/Location__c/fields/Loc_Flag__c.field-meta.xml
<CustomField>
    <fullName>Loc_Flag__c</fullName>
    <label>Loc Flag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>