force-app/main/default/objects/Location__c/fields/New_ONT_Available__c.field-meta.xml
<CustomField>
    <fullName>New_ONT_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New ONT Available</label>
    <type>Checkbox</type>
</CustomField>