force-app/main/default/objects/Location__c/fields/OHP_l2sid__c.field-meta.xml
<CustomField>
    <fullName>OHP_l2sid__c</fullName>
    <label>OHP l2sid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>