force-app/main/default/objects/Location__c/fields/ONT_Install_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>ONT_Install_Lead_Time__c</fullName>
    <label>ONT Install Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>