force-app/main/default/objects/Location__c/fields/Parent_Location__c.field-meta.xml
<CustomField>
    <fullName>Parent_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This allows us to relate a location to the correct location. Additionally, it allows us to be able to quckly do roll up summaries of the child records.</description>
    <inlineHelpText>Lookup field on the location record to the different area type. e.g. market area or region.</inlineHelpText>
    <label>Parent Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Related Locations</relationshipLabel>
    <relationshipName>Related_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>