force-app/main/default/objects/Location__c/fields/Parent_UPRN__c.field-meta.xml
<CustomField>
    <fullName>Parent_UPRN__c</fullName>
    <description>Helps to identify flats/apartment within MDUs.</description>
    <inlineHelpText>Helps to identify flats/apartment within MDUs.</inlineHelpText>
    <label>Parent UPRN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>