force-app/main/default/objects/Location__c/fields/RFS_Status__c.field-meta.xml
<CustomField>
    <fullName>RFS_Status__c</fullName>
    <description>Help us to suppress a property against sales and marketing activity. Helps to identify and tailor comms for new acquisition.</description>
    <inlineHelpText>Denotes the status of sale against the property. (NOT_RFS_4 to NOT_RFS_1, RFS_0 to RFS_4). See cityfibre DR/RFS status matrix for reference.</inlineHelpText>
    <label>RFS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT_RFS_4</fullName>
            </value>
            <value>
                <fullName>NOT_RFS_3</fullName>
            </value>
            <value>
                <fullName>NOT_RFS_2</fullName>
            </value>
            <value>
                <fullName>NOT_RFS_1</fullName>
            </value>
            <value>
                <fullName>RFS_0</fullName>
            </value>
            <value>
                <fullName>RFS_1</fullName>
            </value>
            <value>
                <fullName>RFS_2</fullName>
            </value>
            <value>
                <fullName>RFS_3</fullName>
            </value>
            <value>
                <fullName>RFS_4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>