force-app/main/default/objects/Location__c/fields/Swift_Id__c.field-meta.xml
<CustomField>
    <fullName>Swift_Id__c</fullName>
    <label>Swift Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>