force-app/main/default/objects/Location__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Distinguishes between area / region and residential / commercial property.</description>
    <inlineHelpText>Distinguishes between area / region and residential / commercial property.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Region</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Market Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>