force-app/main/default/objects/Location__c/fields/UPRN__c.field-meta.xml
<CustomField>
    <fullName>UPRN__c</fullName>
    <label>UPRN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>