force-app/main/default/objects/Location__c/recordTypes/Area.recordType-meta.xml
<RecordType>
    <fullName>Area</fullName>
    <active>true</active>
    <label>Area</label>
</RecordType>