force-app/main/default/objects/Location__c/listViews/All_Market_Areas.listView-meta.xml
<ListView>
    <fullName>All_Market_Areas</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Parent_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Market Area</value>
    </filters>
    <label>All Market Areas</label>
</ListView>