force-app/main/default/objects/Location__c/listViews/All_Properties.listView-meta.xml
<ListView>
    <fullName>All_Properties</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Parent_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Location__c.Property</value>
    </filters>
    <label>All Properties</label>
</ListView>