force-app/main/default/objects/Location__c/listViews/All_Sales_Regions.listView-meta.xml
<ListView>
    <fullName>All_Sales_Regions</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Parent_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Sales Region</value>
    </filters>
    <label>All Sales Regions</label>
</ListView>